[project]
name = "comfyui_get_promptid"
description = "NODES: Get Prompt_Id, Success Callback\nget comfyui task id and Callback for successful image generation, in conjunction with the back-end"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/xs315431/Comfyui_Get_promptId"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui_Get_promptId"
Icon = ""
